# hgit

./: .gitignore  CHANGELOG.md  README.md  hgit.cabal
.devcontainer/: devcontainer.json
app/: Main.hs
src/: Base.hs  Cmd.hs  Const.hs  Data.hs  Diff.hs  Opt.hs  Util.hs
src/Cmd/: CatFile.hs  CmdComm.hs  HashObject.hs  Init.hs
tests/: Test.hs
