cabal-version:      2.4
name:               hgit
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             iails
maintainer:         iailsfe@163.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library hgit-lib
    exposed-modules:  Opt,
                      Cmd,
                      Util,
                      Data,
                      Base
                      
    other-modules:    Const,
                    --   Base,
                      Diff

    build-depends:    base ^>=4.14.3.0,
                      optparse-applicative,
                      directory,
                      filepath,
                      cryptohash,
                      bytestring ^>= 0.11.2.0,
                      utf8-string,
                      transformers,
                      mtl,
                      process,
                      containers,
                      array

    hs-source-dirs:   src

    default-language: Haskell2010

executable hgit
    main-is:          Main.hs

    build-depends:    base ^>=4.14.3.0,
                      hgit-lib

    hs-source-dirs:   app

    default-language: Haskell2010


-- https://gist.github.com/mbbx6spp/1343429
-- Note: you might need to run: cabal configure --enable-tests and cabal build again.
-- Now you should be able to just run: cabal test and it should integrate.

test-suite tests
    type:             exitcode-stdio-1.0

    main-is:          Test.hs

    build-depends:    base ^>=4.14.3.0,
                      hgit-lib,
                      tasty,
                      tasty-hunit,
                      bytestring,
                      utf8-string,
                      transformers,
                      mtl

    hs-source-dirs:   tests

    default-language: Haskell2010
